--- a/src/components/CourseCard/CourseCard.css
+++ b/src/components/CourseCard/CourseCard.css
@@ -15,29 +15,31 @@
 }
 
 .course-info {
-  margin: 0 15px;
+  max-height: 130px;
+  min-width: 290px;
 }
 
 .course-info h4 {
   font-size: 18px;
   font-weight: 600;
   color: #323232;
-  margin-top: 0;
+  margin: 5px 0;
 }
 
 .course-info p {
   color: darkgrey;
   font-size: 14px;
+  margin: 5px 0;
 }
 
 .course-info i {
-  margin: 0 5px;
+  margin: 15px 5px 0 5px;
   font-size: 14px;
 }
 
 .share-course {
   display: flex;
-  height: 70%;
+  height: 80%;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +52,8 @@
 }
 
 .fa-share {
-  padding: 12px 15px;
+  margin-top: 30px;
+  padding: 10px 12px;
   border: 1px solid darkgray;
   border-radius: 3px;
 }
